--- a/src/Components/Top Stories/TopStories.css
+++ b/src/Components/Top Stories/TopStories.css
@@ -1,6 +1,7 @@
 .topstories_container .topstor_bar h3 {
-  font-family: 'Franklin';
+  font-family: 'Roboto' !important;
   font-size: 17px;
+  font-weight: bold !important;
 }
 
 .topstories_container .topstor_content_wrapper {
@@ -45,6 +46,7 @@
 .topstories_container .topstor_content_wrapper .topstor_side_content .side_content_w_img .side_content_media {
   width: 100%;
   height: 150px;
+  overflow-y: hidden;
   margin-bottom: 10px;
 }
 
@@ -103,7 +105,7 @@
   height: 100%;
   border-left: 1px solid #e0e0db;
   border-right: 1px solid #e0e0db;
-  padding: 0px 10px;
+  padding: 0px 0px !important;
 }
 
 .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_1 .side_left .side_left_media {
@@ -111,6 +113,7 @@
   height: 45%;
   position: relative;
   margin-bottom: 10px;
+  overflow-y: hidden;
 }
 
 .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_1 .side_left .side_left_media img {
@@ -208,6 +211,7 @@
   width: 100%;
   height: 200px;
   margin-bottom: 10px;
+  overflow-y: hidden;
 }
 
 .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 .side_left .side_left_content:first-child .side_left_content_media img {
@@ -259,6 +263,7 @@
   width: 100%;
   height: 150px;
   margin-bottom: 5px;
+  overflow-y: hidden;
 }
 
 .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 .side_right .side_right_content .side_right_content_media img {
@@ -271,5 +276,38 @@
 .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 .side_right .side_right_content .side_right_content_title {
   font-weight: 200;
   font-size: 18px;
+}
+
+@media only screen and (max-width: 800px) {
+  .topstories_container .topstor_content_wrapper .topstor_side_content {
+    display: none;
+  }
+  .topstories_container .topstor_content_wrapper .topstor_main_content {
+    width: 100% !important;
+  }
+  .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_1, .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 {
+    display: block !important;
+  }
+  .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_1 .side_left, .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 .side_left {
+    width: 100% !important;
+    border: none !important;
+  }
+  .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_1 .side_left .side_left_content, .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 .side_left .side_left_content {
+    margin-bottom: 20px;
+  }
+  .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_1 .side_left .side_left_content_title, .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 .side_left .side_left_content_title {
+    font-size: 25px !important;
+  }
+  .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_1 .side_left .side_left_content_description, .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 .side_left .side_left_content_description {
+    margin-top: 5px !important;
+    margin-bottom: 20px;
+    font-size: 17px !important;
+  }
+  .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_1 .side_right, .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 .side_right {
+    width: 100% !important;
+  }
+  .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_1 .side_right .side_right_content .side_right_content_media, .topstories_container .topstor_content_wrapper .topstor_main_content .topstor_section_2 .side_right .side_right_content .side_right_content_media {
+    height: 200px;
+  }
 }
 /*# sourceMappingURL=TopStories.css.map */
