--- a/src/Components/HeaderNav/HeaderNav.css
+++ b/src/Components/HeaderNav/HeaderNav.css
@@ -2,6 +2,23 @@
   font-family: 'Franklin';
 }
 
+.header .sas {
+  width: 100%;
+  height: auto;
+}
+
+.header .sas .side_nav {
+  width: 100%;
+  height: 93.3vh;
+  position: absolute;
+  z-index: 10;
+  display: none;
+}
+
+.header .sas .mobile_date_weather_login {
+  display: none;
+}
+
 .header .sub_header {
   width: 100%;
   height: 7vh;
@@ -28,6 +45,10 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.header .sub_header .left .menu_bar {
+  display: none;
 }
 
 .header .sub_header .center {
@@ -60,5 +81,116 @@
       align-self: flex-start;
   color: rgba(0, 0, 240, 0.63);
   margin-right: 5px;
+}
+
+.header .sub_header .right .mobile_aut_btn {
+  display: none;
+}
+
+.header .sub_header .right .close_nav {
+  display: none;
+}
+
+@media only screen and (max-width: 1120px) {
+  .header .sub_header {
+    padding: 15px 0px;
+    height: auto;
+    border: none;
+  }
+  .header .sub_header .left {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .header .sub_header .left p {
+    display: none;
+  }
+  .header .sub_header .left .menu_bar {
+    display: block;
+  }
+  .header .sub_header .right {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .header .sub_header .right span {
+    display: none;
+  }
+  .header .sub_header .right .mobile_aut_btn {
+    display: block;
+  }
+  .header .sub_header .center {
+    padding: 0;
+  }
+  .header .mobile_date_weather_login {
+    height: auto;
+    width: 100%;
+    background: #F7F7F7;
+    margin-top: 5px;
+    display: block;
+    padding: 15px 0px;
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+  }
+  .header .mobile_date_weather_login .mobile_info_wrapper {
+    width: 50%;
+    height: 100%;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    font-family: 'Roboto';
+    font-weight: 400;
+    color: #326891;
+  }
+  .header .mobile_date_weather_login .mobile_info_wrapper span:first-child, .header .mobile_date_weather_login .mobile_info_wrapper span:last-child {
+    font-weight: bold;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .header .sub_header .center h1 {
+    font-size: 45px;
+  }
+  .header .mobile_date_weather_login .mobile_info_wrapper {
+    width: 60%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .header .sub_header .center h1 {
+    font-size: 40px;
+  }
+  .header .mobile_date_weather_login .mobile_info_wrapper {
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .header .sub_header .center h1 {
+    font-size: 35px;
+  }
+  .header .mobile_date_weather_login .mobile_info_wrapper {
+    width: 70%;
+    font-size: 13px;
+  }
+}
+
+@media only screen and (max-width: 470px) {
+  .header .sub_header .center h1 {
+    font-size: 28px;
+  }
+  .header .mobile_date_weather_login .mobile_info_wrapper {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .header .sub_header .center h1 {
+    font-size: 25px;
+  }
 }
 /*# sourceMappingURL=HeaderNav.css.map */
