--- a/src/Components/HeaderNav/HeaderNav.scss
+++ b/src/Components/HeaderNav/HeaderNav.scss
@@ -1,7 +1,27 @@
-
-
 .header {
     font-family: 'Franklin';
+
+    
+
+    .sas {
+        width: 100%;
+        height: auto;
+        .side_nav {
+            width: 100%;
+            height: 93.3vh;
+            position: absolute;
+            // background: #000;
+            // top: 0;
+            z-index: 10;
+            display: none;
+        }
+
+        .mobile_date_weather_login {
+            display: none;
+        }
+    }
+
+
     .sub_header {
         width: 100%;
         height: 7vh;
@@ -9,7 +29,7 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        border-bottom: 1px solid rgb(204, 204, 204);
+        border-bottom: 1px solid #cccccc;
 
         .left {
             width: 20%;
@@ -17,6 +37,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+
+
+            .menu_bar {
+                display: none;
+            }
 
         }
 
@@ -44,6 +70,168 @@
                 align-self: flex-start;
                 color: rgba(0, 0, 240, 0.63);
                 margin-right: 5px;
+            }
+
+            .mobile_aut_btn {
+                display: none;
+            }
+            .close_nav {
+                display: none;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1120px) {
+    .header {
+        .sub_header {
+            // justify-content: space-between !important;
+            padding: 15px 0px;
+            height: auto;
+            border: none;
+            .left {
+                // background: blue;
+                width: fit-content;
+                p {
+                    display: none;
+                }
+
+                .menu_bar {
+                    display: block ;
+                }
+            }
+
+            .right {
+                // background: brown;
+                width: fit-content;
+                span {
+                    display: none;
+                }
+
+                .mobile_aut_btn {
+                    display: block;
+                }
+            }
+
+            .center {
+                // width: 90%;
+                // background: red;
+                padding: 0;
+            }
+        }
+
+        .mobile_date_weather_login {
+            height: auto;
+            width: 100%;
+            background: #F7F7F7;
+            margin-top: 5px;
+            display: block;
+            padding: 15px 0px;
+            border-top: 1px solid #cccccc;
+            border-bottom: 1px solid #cccccc;
+
+            .mobile_info_wrapper{
+                width: 50%;
+                height: 100%;
+                margin: 0 auto;
+                display: flex;
+                justify-content: space-between;
+                font-family: 'Roboto';
+                font-weight: 400;
+                color: #326891;
+
+                span {
+                    &:first-child, &:last-child {
+                        font-weight: bold;
+                    }
+                    
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .header {
+        .sub_header {
+            .center {
+                h1 {
+                    font-size: 45px;
+                }
+            }
+        }
+
+        .mobile_date_weather_login {
+            .mobile_info_wrapper {
+                width: 60%;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .header {
+        .sub_header {
+            .center {
+                h1 {
+                    font-size: 40px;
+                }
+            }
+        }
+
+        .mobile_date_weather_login {
+            .mobile_info_wrapper {
+                width: 70%;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .header {
+        .sub_header {
+            .center {
+                h1 {
+                    font-size: 35px;
+                }
+            }
+        }
+
+        .mobile_date_weather_login {
+            .mobile_info_wrapper {
+                width: 70%;
+                font-size: 13px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 470px) {
+    .header {
+        .sub_header {
+            .center {
+                h1 {
+                    font-size: 28px;
+                }
+            }
+        }
+
+        .mobile_date_weather_login {
+            .mobile_info_wrapper {
+                width: 80%;
+            }
+        }
+    }
+}
+
+
+@media only screen and (max-width: 360px) {
+    .header {
+        .sub_header {
+            .center {
+                h1 {
+                    font-size: 25px;
+                }
             }
         }
     }
