--- a/src/Components/Hot Topics/HotTopics.css
+++ b/src/Components/Hot Topics/HotTopics.css
@@ -21,4 +21,32 @@
   text-decoration: none;
   color: black;
 }
+
+@media only screen and (max-width: 1500px) {
+  .hot_topics {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .hot_topics {
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .hot_topics {
+    width: 80%;
+    margin-bottom: 10px;
+    font-size: 13px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .hot_topics {
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 10px;
+  }
+}
 /*# sourceMappingURL=HotTopics.css.map */
