--- a/src/Components/News Category/HomeNewsCategory.css
+++ b/src/Components/News Category/HomeNewsCategory.css
@@ -21,6 +21,7 @@
 .newscategory_container .newscatg_wrapper .main_content .media {
   width: 100%;
   height: 400PX;
+  overflow-y: hidden;
 }
 
 .newscategory_container .newscatg_wrapper .main_content .media img {
@@ -55,6 +56,7 @@
 .newscategory_container .newscatg_wrapper .side_content .left_cnt .left_media {
   width: 100%;
   height: 200PX;
+  overflow-y: hidden;
 }
 
 .newscategory_container .newscatg_wrapper .side_content .left_cnt .left_media img {
@@ -113,5 +115,85 @@
   -ms-flex-item-align: end;
       align-self: flex-end;
   color: rgba(0, 0, 0, 0.61);
+}
+
+@media only screen and (max-width: 1316px) {
+  .newscategory_container {
+    width: 94%;
+    margin: 0 auto;
+  }
+  .newscategory_container .newscatg_wrapper .main_content {
+    width: 67%;
+  }
+  .newscategory_container .newscatg_wrapper .side_content {
+    width: 30%;
+  }
+  .newscategory_container .newscatg_wrapper .side_content .right_cnt {
+    display: none;
+  }
+  .newscategory_container .newscatg_wrapper .side_content .left_cnt {
+    width: 100%;
+  }
+  .newscategory_container .newscatg_wrapper .side_content .left_cnt .left_media {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .newscategory_container {
+    width: 94%;
+    margin: 0 auto;
+  }
+  .newscategory_container .newscatg_wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .newscategory_container .newscatg_wrapper .main_content {
+    width: 100%;
+    border: none;
+  }
+  .newscategory_container .newscatg_wrapper .side_content {
+    width: 100%;
+    height: 40vh;
+    overflow: hidden;
+    margin-top: 20px;
+    padding: 0px;
+  }
+  .newscategory_container .newscatg_wrapper .side_content .right_cnt {
+    width: 48%;
+    display: block;
+  }
+  .newscategory_container .newscatg_wrapper .side_content .left_cnt {
+    width: 48%;
+    padding-right: 2%;
+    border-right: 1px solid #e0e0db;
+  }
+  .newscategory_container .newscatg_wrapper .side_content .left_cnt .left_media {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .newscategory_container .newscatg_wrapper .main_content .media {
+    height: 230px;
+  }
+  .newscategory_container .newscatg_wrapper .side_content {
+    height: auto;
+    margin-top: 10px;
+    padding: 0px;
+  }
+  .newscategory_container .newscatg_wrapper .side_content .right_cnt {
+    display: none;
+  }
+  .newscategory_container .newscatg_wrapper .side_content .left_cnt {
+    width: 100%;
+    padding-right: 2%;
+    border-right: none;
+  }
+  .newscategory_container .newscatg_wrapper .side_content .left_cnt .left_media {
+    display: none;
+  }
 }
 /*# sourceMappingURL=HomeNewsCategory.css.map */
