--- a/src/Components/Top Stories/TopStories.scss
+++ b/src/Components/Top Stories/TopStories.scss
@@ -1,8 +1,9 @@
 .topstories_container {
     .topstor_bar {
         h3 {
-            font-family: 'Franklin';
+            font-family: 'Roboto' !important;
             font-size: 17px;
+            font-weight: bold !important;
         }
     }
 
@@ -48,6 +49,8 @@
                 .side_content_media {
                     width: 100%;
                     height: 150px;
+                    // display: none;
+                    overflow-y: hidden;
                     // background-color: black;
                     margin-bottom: 10px;
                     img {
@@ -86,7 +89,6 @@
         .topstor_main_content {
             width: 73%;
             height: auto;
-            // background-color: salmon;
 
             .topstor_section_1 {
                 width: 100%;
@@ -101,12 +103,13 @@
                     // background-color: rgb(255, 98, 25);
                     border-left: 1px solid #e0e0db;
                     border-right: 1px solid #e0e0db;
-                    padding: 0px 10px;
+                    padding: 0px 0px !important;
                     .side_left_media {
                         width: 100%;
                         height: 45%;
                         position: relative;
                         margin-bottom: 10px;
+                        overflow-y: hidden;
     
                         
                         //     .gradient {
@@ -218,6 +221,7 @@
                                 width: 100%;
                                 height: 200px;
                                 margin-bottom: 10px;
+                                overflow-y: hidden;
                                 // background-color: black;
                                 img {
                                     width: inherit;
@@ -269,6 +273,7 @@
                             width: 100%;
                             height: 150px;
                             margin-bottom: 5px;
+                            overflow-y: hidden;
                             // background-color: black;
 
                             img {
@@ -288,4 +293,53 @@
 
         }
     }
+}
+
+@media only screen and (max-width: 800px) {
+
+    .topstories_container {
+        .topstor_content_wrapper {
+            .topstor_side_content {
+                display: none;
+            }
+
+            .topstor_main_content {
+                width: 100% !important;
+                
+                .topstor_section_1, .topstor_section_2 {
+                    display: block !important;
+
+                    .side_left {
+                        width: 100% !important;
+                        border: none !important;
+
+                        .side_left_content {
+                            margin-bottom: 20px;
+                        }
+                        .side_left_content_title {
+                            font-size: 25px !important;
+                        }
+                        .side_left_content_description {
+                            margin-top: 5px !important;
+                            margin-bottom: 20px;
+                            font-size: 17px !important;
+                        }
+                    }
+                    .side_right {
+                        width: 100% !important;
+
+                        .side_right_content {
+                            &:first-child {
+                                // display: none !important;
+                            }
+                            .side_right_content_media {
+                                height: 200px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
 }
